mType/tests/testFiles/error/error/classModifyingFinalField.mt
class TestClass {
    final int value = 10;
    
    function changeValue(): void {
        value = 20;
    }
}